[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/audio/sounds/ui/UI_Menu_Mouse_Over_02.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/audio/sounds/ui/UI_Menu_Select_02.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/sound/menu_button_sounds.gd" type="Script" id=3]

[node name="MenuButtonSounds" type="Node"]
script = ExtResource( 3 )

[node name="MouseOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -6.0
bus = "UI"

[node name="PressedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -6.0
bus = "UI"
[connection signal="finished" from="PressedSound" to="." method="_on_PressedSound_finished"]
